Now Action actully work! Added GUI for adding,editing,removing actions